--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,7 +1,11 @@
-<%=form_for @question do |f|%>
-<%= f.label :title %>:
-<%= f.text_field :title %>
-<%= f.label :content %>:
-<%= f.text_field :content %>
-<%= f.submit %>
+<%=form_for [@user, @question] do |f|%>
+
+  <%= f.label :title %>:
+  <%= f.text_field :title %>
+
+  <%= f.label :content %>:
+  <%= f.text_field :content %>
+
+  <%= f.submit %>
 <%end%>   
+
