--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,3 +1,8 @@
+<h3><%= link_to 'new', new_user_question_path(@user) %></h3><br>
+
+
+<h1> HELLO </h1>
+
 <% @questions.each do |question| %>
 
   <%= question.title %><br>
