added flash messages and before filters for user routes #edit, #update, and #destroy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
 <body>
 <%= render "layouts/nav" %>
 <%= yield %>
-
+<%= render 'layouts/errors' %>
+<%= render 'layouts/success' %>
 </body>
 </html>
