--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 </head>
 <body>
 <%= render "layouts/nav" %>
+<%= render "/shared/navbar" %>
 <%= yield %>
 <%= render 'layouts/errors' %>
 <%= render 'layouts/success' %>
