--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,10 +1,7 @@
-<h3><%= link_to 'new', new_user_question_path(@user) %></h3><br>
+<div id="main_title"> DBC Overflow </div>
 
-
-<h1> HELLO </h1>
-
-<% @questions.each do |question| %>
-
-  <%= question.title %><br>
-  <%= question.content %>
-<%end%>
+<div id="homepage_title_container">
+  <% @questions.each do |question| %>
+    <div class="homepage_titles"><%= link_to question.title, question_path(question) %></div>
+  <%end%>
+</div>
