--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,5 @@
-<h3><%= link_to 'new', new_user_question_path(@user) %></h3><br>
-<h3><%= link_to 'edit', edit_user_question_path(@user, @question) %></h3><br>
-<h3><%= link_to 'delete', user_question_path(@user, @question), method: :delete  %></h3>
+<nav id= 'questions'>
+<%= link_to 'new post', new_user_question_path(@user) if current_user %>
+<%= link_to 'edit post', edit_user_question_path(@user, @question) if @question && owner(@question)%>
+<%= link_to 'delete post', user_question_path(@user, @question), method: :delete if @question && owner(@question)%>
+</nav>
