--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,3 +1,6 @@
-<h2> Create a New User </h2>
+<div class="user_form">
+  <h2> Create a New User </h2>
 
-<%= render 'form' %>
+  <%= render 'form' %>
+</div>
+
