--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,14 +3,16 @@
 <head>
   <title>DbcOverflow</title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
+  <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render "layouts/nav" %>
-<%= render "/shared/navbar" %>
-<%= yield %>
-<%= render 'layouts/errors' %>
-<%= render 'layouts/success' %>
+    <%= render "layouts/nav" %>
+  <div id="bg">
+  </div>
+    <%= yield %>
+    <%= render 'layouts/errors' %>
+    <%= render 'layouts/success' %>
 </body>
 </html>
