--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,7 +1,15 @@
-<div id="main_title"> DBC Overflow </div>
 
-<div id="homepage_title_container">
-  <% @questions.each do |question| %>
-    <div class="homepage_titles"><%= link_to question.title, question_path(question) %></div>
-  <%end%>
-</div>
+  <div id="main_title"> Young Boot Questions </div>
+
+    <div id="homepage_title_container">
+      <% @questions.each do |question| %>
+        <div class="homepage_titles"><%= link_to question.title, question_path(question) %></div>
+      <%end%>
+    </div>
+  </div>
+
+
+    <div class="images">
+      <img src="http://devbootcamp.com/imgs/get-involved-staff.png">
+    </div>
+
