--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,3 +1,4 @@
+<div class="show_post">
+<div class="post_title"><%= @question.title %></div>
+<div class="post_body"><%= @question.content %></div>
 
-<%= @question.title %>
-<%= @question.content %>
