--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,3 +1,5 @@
-<h2>Edit Your Profile</h2>
+<div class="user_form">
+  <h2>Edit Your Profile</h2>
 
-<%= render 'form' %>
+  <%= render 'form' %>
+</div>
