--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,10 @@
+<!-- REVIEW: too many if statements, can we combine them?
+if current_user
+  ...
+end -->
 <nav id="main_nav">
   <div id='header'><%= link_to 'DBC HOME BRO', root_path %></div>
-  <%= link_to "Sign Up", signup_path unless current_user %>
+  <%= link_to "Sign Up", signup_path, unless current_user %>
   <%= link_to "Sign In", signin_path unless current_user %>
   <%= link_to "Profile", user_path(@user) if current_user %>
   <%= link_to "Sign Out", signout_path, method: "delete" if current_user%>
