--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,3 +6,14 @@
   <%= link_to "Edit", edit_user_path %>
   <%= link_to "Delete", user_path, :method => "delete" %>
 </div>
+
+<% @user.questions.each do |q| %>
+<% @question = q %>
+<%= render "question" %>
+<% end %>
+
+<% @user.answers.each do |a| %>
+<% @answer = a %>
+<%= render "answer" %>
+<% end %>
+
