--- a/app/views/questions/_form.html.erb
+++ b/app/views/questions/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="user_form">
 
-<%=form_for [@user, @question] do |f|%>
+<%=form_for(@question) do |f|%>
 
   <%= f.text_field :title, placeholder: "title" %>
 
