--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,28 +1,25 @@
-
-  <div id="main_title"> Young Boot Questions </div>
-
-    <div id="homepage_title_container">
-      <% @questions.each do |question| %>
-        <div class="voting">
-          <% if current_user %>
-          <%= form_for(current_user.votes.build(:question_id => question.id), remote: true) do |f| %>
-          <%= f.hidden_field :question_id, value: question.id %>
-          <%= f.submit "Upvote!", :class => "upvote" %>
+<div id="main_title"> Young Boot Questions </div>
+  <div id="homepage_title_container">
+    <% @questions.each do |question| %>
+      <div class="voting">
+        <% if current_user %>
+          <%= form_for(current_user.votes.build(:voteable_id => question.id, :voteable_type => 'question'), remote: true) do |f| %>
+            <%= f.hidden_field :question_id, value: question.id %>
+            <%= f.submit "Upvote!", :class => "upvote" %>
           <% end %>
-          <% end %>
-        </div>
-        <div class="votes">
-          <%= question.votes.count %>
-        </div>
-        <div class="homepage_titles">
-          <%= link_to question.title, question_path(question) %>
-        </div>
-      <%end%>
-    </div>
+        <% end %>
+      </div>
+      <div class="votes">
+        <%= question.votes.count %>
+      </div>
+      <div class="homepage_titles">
+        <%= link_to question.title, question_path(question) %>
+      </div>
+      <% end %>
   </div>
+</div>
 
 
-    <div class="images">
-      <img src="http://devbootcamp.com/imgs/get-involved-staff.png">
-    </div>
-
+  <div class="images">
+    <img src="http://devbootcamp.com/imgs/get-involved-staff.png">
+  </div>
