--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -4,7 +4,8 @@
       <div class="voting">
         <% if current_user %>
           <%= form_for(current_user.votes.build(:voteable_id => question.id, :voteable_type => 'question'), remote: true) do |f| %>
-            <%= f.hidden_field :question_id, value: question.id %>
+            <%= f.hidden_field :id, value: question.id %>
+            <%= f.hidden_field :resource, value: question.class.to_s %>
             <%= f.submit "Upvote!", :class => "upvote" %>
           <% end %>
         <% end %>
