--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,5 +1,5 @@
 <nav id="main_nav">
-  <div id='header'><%= link_to 'DBC HOME BRO', root_path %></div>
+  <div id='header'><%= link_to 'DBC Overflow', root_path %></div>
   <%= link_to "Sign Up", signup_path unless current_user %>
   <%= link_to "Sign In", signin_path unless current_user %>
   <%= link_to "Profile", user_path(current_user) if current_user %>
