--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -8,7 +8,6 @@ body{
   background-color: $light-gray;
   background-repeat: no-repeat;
   background-size: 110% 900px;
-  overflow: hidden;
   z-index: -1;
   background-position: 0 0;
   width: 100%;
@@ -18,8 +17,8 @@ body{
 #bg{
   position: absolute;
   background-color: #fff;
-  width: 10000px;
-  height: 10000px;
+  width: 100%;
+  height: 1000px;
   opacity: 0.9;
   z-index: -100;
 }
