--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -127,6 +127,15 @@ h2{
     background-color: $green_sea;
     cursor: pointer;
   }
+  .voting{
+    background-color: $main_green;
+    float:left;
+    width: 100px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    margin-left: -150px;
+    margin-top: -5px;
+  }
 }
 
 .show_post{
@@ -144,6 +153,28 @@ h2{
     text-align: center;
     font-size: 20px;
     background-color: $green_sea;
+    color: $light_gray;
+
+    .voting{
+      background-color: $main_green;
+      float:left;
+      width: 150px;
+      padding: 5px 10px;
+      border-radius: 5px;
+      margin-left: -250px;
+      margin-top: -16px;
+    }
+  }
+}
+
+.answer{
+  top: 80px;
+  background-color: $navy_blue;
+  padding: 20px;
+  color: #fff;
+  font-size: 20px;
+  &:hover{
+    text-decoration: none;
     color: $light_gray;
   }
 }
