--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,15 +1,15 @@
 <div id="main_title"> Young Boot Questions </div>
   <div id="homepage_title_container">
     <% @questions.each do |question| %>
-      <%= render partial: 'shared/voting', locals: {voteable: question} %>
       <div class="homepage_titles">
-        <%= link_to question.title, question_path(question) %>
+        <%= render partial: 'shared/question_voting', locals: {voteable: question} %>
+        <%= link_to question.title, question_path(question)%>
       </div>
       <% end %>
   </div>
 </div>
 
 
-  <div class="images">
-    <img src="http://devbootcamp.com/imgs/get-involved-staff.png">
-  </div>
+<div class="images">
+  <img src="http://devbootcamp.com/imgs/get-involved-staff.png">
+</div>
