--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,10 +1,13 @@
 <nav id="main_nav">
   <div id='header'><%= link_to 'DBC Overflow', root_path %></div>
-  <%= link_to "Sign Up", signup_path unless current_user %>
-  <%= link_to "Sign In", signin_path unless current_user %>
-  <%= link_to "Profile", user_path(current_user) if current_user %>
-  <%= link_to "Sign Out", signout_path, method: "delete" if current_user%>
-    <%= link_to 'New post', new_question_path if current_user %>
+  <% if current_user %>
+    <%= link_to "Profile", user_path(current_user) %>
+    <%= link_to "Sign Out", signout_path, method: "delete" %>
+    <%= link_to 'New post', new_question_path %>
+  <% else %>
+    <%= link_to "Sign Up", signup_path %>
+    <%= link_to "Sign In", signin_path %>
+  <% end %>
   <%#= link_to 'Edit post', edit_user_question_path(@user, @question) if @question && @question.current_user_is_owner? %>
   <%#= link_to 'Delete post', user_question_path(@user, @question), method: :delete if @question && @question.current_user_is_owner? %>
 </nav>
