--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,9 @@
     <%= render "layouts/nav" %>
   <div id="bg">
   </div>
-    <%= yield %>
+    <div class="container">
+      <%= yield %>
+    </div>
     <%= render 'layouts/errors' %>
     <%= render 'layouts/success' %>
 </body>
