--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,4 +1,4 @@
-<div id="main_title"> Young Boot Questions </div>
+<div id="main_title">Answers for Incoming Boots</div>
   <div id="homepage_title_container">
     <% @questions.each do |question| %>
       <div class="homepage_titles">
@@ -11,9 +11,9 @@
       </div>
       <% end %>
   </div>
-</div>
+  <div class="images">
+    <img src="http://devbootcamp.com/imgs/get-involved-staff.png">
+  </div>
 
 
-<div class="images">
-  <img src="http://devbootcamp.com/imgs/get-involved-staff.png">
-</div>
+
