--- a/app/views/shared/_answer.html.erb
+++ b/app/views/shared/_answer.html.erb
@@ -9,6 +9,14 @@
     <% end %>   
     <%= render partial: "shared/voting", locals: {voteable: answer} %>
     <p><%= answer.content %></p>
+    <% if answer.user %>
+      <p>From: <%= answer.user.name %></p>
+    <% else %>
+      <p>From: [Deleted Account]</p>
+    <% end %>
+    <div class="delete_button_div">
+    <%= link_to "Delete Answer", [question, answer], :method=> 'delete', :class => "delete_button" if answer.user == current_user%>
+    </div>
 
   </li>
 
