--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -2,6 +2,7 @@ $main_green: #1abc9c;
 $navy_blue: #34495e;
 $light_gray: #d6dbdf;
 $green_sea: #16A085;
+$red: #e74c3c;
 
 body{
   background-image: url(http://photos2.meetupstatic.com/photos/theme_body/d/9/5/a/full_2035642.jpeg);
@@ -31,33 +32,33 @@ body{
   div {
    float: left;
    margin-left: 40px;
-  }
+ }
 
-  a {
-    color: #fff;
+ a {
+  color: #fff;
+  text-decoration: none;
+  line-height: 80px;
+  float: right;
+  margin-right: 40px;
+  font-size: 20px;
+}
+
+#header{
+  a{
     text-decoration: none;
-    padding: 10px;
-    line-height: 80px;
-    float: right;
-    margin-right: 40px;
-    font-size: 20px;
+    color: #fff;
+    font-size: 30px;
   }
-
-  #header{
-    a{
-      text-decoration: none;
-      color: #fff;
-      font-size: 30px;
-    }
-  }
+}
 }
 
 .images {
   float:right;
+  margin-right: 70px;
   img {
-  display:block;
-  margin: 50px auto;
- }
+    display:block;
+    margin: 50px auto;
+  }
 }
 
 
@@ -66,12 +67,12 @@ h2 {
   font-size: 30px;
   margin: 0;
   padding: 0;
+  text-align: left;
 }
 
 .user_form{
   font-size: 20px;
   width: 400px;
-  margin: 20px auto 0 auto;
   input{
     font-size: 18px;
     margin: 10px;
@@ -85,14 +86,16 @@ h2 {
     border: 0;
     color: $light-gray;
   }
+  textarea {
+    width: 500px;
+  }
 }
 
 #main_title{
   clear: left;
   width: 100%;
-  height: 160px;
+  height: 120px;
   line-height: 120px;
-  margin-bottom: 30px;
   font-size: 40px;
   text-align: center;
   color: $navy_blue;
@@ -100,49 +103,56 @@ h2 {
 }
 
 #homepage_title_container{
-  width: 50%;
-  margin-left: 20%;
+  width: 40%;
+  margin-left: 5%;
   float: left;
+  margin-top: 50px;
 }
 
 .homepage_titles{
 
-  width: 50%;
   height: 75px;
   color: $light_gray;
 
   
   .voting{
     background-color: $main_green;
-    float: right;
     width: 100px;
     padding: 5px 10px;
     border-radius: 5px;
-    margin-top: 25px;
-    margin-right: 0px;
+    margin-right: 20px;
+    display: inline-block;
+    
+    a:nth-of-type(2) {
+      float: right
+    }
+
+    .votecount {
+      margin-left: 15px;
+      margin-bottom: 5px;
+    }
   }
 
   a{
     text-decoration: none;
     color: $light_gray;
-    }
+  }
 
   .question {
     font-size: 19px;
-    float: right;
     background-color: $navy_blue;
     border-radius: 5px;
     border: 1px solid $green_sea;
     padding: 5px;
-    width: 50%;
+    width: 65%;
     height: 50px;
-    margin-top: 10px;
     line-height: 50px;
     text-align: center;
+    display: inline-block;
     &:hover{
       background-color: $green_sea;
       cursor: pointer;
-  }
+    }
   }
 }
 
@@ -150,13 +160,13 @@ h2 {
 
 .show_post{
   width: 100%;
-  padding: 50px 0 0 400px;
+  padding: 50px 0 0 50px;
 
   .post_title{
     font-size: 70px;
   }
   .post_body{
-    width: 50%;
+    width: 80%;
     margin-top: 50px;
     margin-bottom: 100px;
     padding: 40px;
@@ -221,7 +231,7 @@ h2 {
     padding: 10px;
     margin: 10px;
     margin-left: 0px;
-    width: 50%;
+    width: 80%;
     
     list-style-type: none;
     background-color: lightgray;
@@ -256,13 +266,74 @@ h2 {
 
 .comment {
   background-color: #EFF;
-  padding: 5px;
-  margin-top: 10px; 
+  padding: 10px;
+  margin-top: 20px; 
   width: 100%;
   color: #8AA;
-  font-size: 12px;
+  font-size: 16px;
+}
 
-  p {
-    margin: 0px;
+
+.container {
+  width: 90%;
+  margin: 20px auto;
+}
+
+
+table {
+  td {
+    border: black 1px solid;
+    padding: 5px;
+    width: 200px;
+    text-align: center;
   }
+}
+
+.user_nav {
+  margin-left: 0;
+  margin-bottom: 30px;
+  li {
+    list-style-type: none;
+    display: inline-block;
+  }
+}
+
+.delete_button_div {
+
+  margin-top: 30px;
+  
+  .delete_button{
+    background-color: $light_gray;
+    padding: 20px;
+    color: #fff;
+    font-size: 20px;
+    line-height: 64px;
+    color: #333;
+
+
+    &:hover{
+      text-decoration: none;
+      background-color: $red;
+      color: white;
+    }
+  }
+
+}
+
+.title{
+  font-size: 70px;
+  display: inline-block;
+}
+
+.user_answers {
+  li {
+    margin-left: 10px;
+  }
+}
+
+.user_questions {
+  margin-bottom: 50px;
+}
+.stats {
+  margin-bottom: 30px;
 }
