--- a/app/views/answers/_new.html.erb
+++ b/app/views/answers/_new.html.erb
@@ -1,9 +1,10 @@
+<div class="user_form">
+
 <%= form_for [question, answer], :remote => true, :html => {:id => "create_answer"} do |f| %>
-  <%= f.label :answer %>
-  <%= f.text_field :content %>
+  <%= f.text_field :content, placeholder: "Type your answer here..." %>
 
   <%= f.submit %>
 
 <% end %>
 
-
+</div>
