--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,8 +1,8 @@
 <div class="user_form">
 
-  <%= form_for [@comment] do |f| %>
+  <%= form_for [@comment], :remote => true do |f| %>
     <%= f.label :comment %>
-    <%= f.text_area :body, placeholder: "Write your comment here." %>
+    <%= f.text_area :body, :size => "10x5", placeholder: "Write your comment here." %>
     <%= f.hidden_field :commentable_type, value: @commentable.class %>
     <%= f.hidden_field :commentable_id, value: @commentable.id %>
     <%= f.submit %>
